k8s/ingress/local/golang-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: golang-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: golang.service
    http:
      paths:
      - path: /
        backend:
          serviceName: golang-service
          servicePort: 1234
