k8s/ingress/local/nodejs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nodejs.service
    http:
      paths:
      - path: /
        backend:
          serviceName: nodejs-service
          servicePort: 3000
